added names to milestone 1

--- a/milestone1.tex
+++ b/milestone1.tex
@@ -2,7 +2,7 @@
 \usepackage{graphicx}
 
 \title{250A Milestone 1}
-\author{Kai Wang, put all your names here}
+\author{Kai Wang, Arul Mathur, Nikitha Maderamitla, Karim Barajas}
 \date{November 2025}
 
 \begin{document}
