--- a/Milestone 4.tex
+++ b/Milestone 4.tex
@@ -180,7 +180,7 @@ The agent frequently overcorrects and revises Q-values, preventing stable conver
 
 \section{Reflections and Contributions}
 \vspace{5pt}
-Kai: I contributed to the project by helping to formalize the problem mathematically, writing milestone 1 & 2, and collecting graphs and metrics for the discussion section for milestone 3. This project taught me a lot about Q-Learning and the process of applying a learning algorithm to a problem. One thing I’ve learned from this project is how important it is to write everything out mathematically. Even though the problem may seem simple, by cleanly writing out things like states, actions, and rewards, the implementation of the code becomes much easier. Lastly, the project also helped me understand the difficulties in adding complexity to an existing problem. Adding 3 players to the chopstick game would make some of the optimizations we did invalid, and would require a completely different approach (multiple Q-Tables). I did not use GenAI for any of my contributions.
+Kai: I contributed to the project by helping to formalize the problem mathematically, writing milestone 1 \& 2, and collecting graphs and metrics for the discussion section for milestone 3. This project taught me a lot about Q-Learning and the process of applying a learning algorithm to a problem. One thing I’ve learned from this project is how important it is to write everything out mathematically. Even though the problem may seem simple, by cleanly writing out things like states, actions, and rewards, the implementation of the code becomes much easier. Lastly, the project also helped me understand the difficulties in adding complexity to an existing problem. Adding 3 players to the chopstick game would make some of the optimizations we did invalid, and would require a completely different approach (multiple Q-Tables). I did not use GenAI for any of my contributions.
 \\ Arul: After working on this project, I've come up with some suggestions and advice to give others who want to recreate the project. Think carefully about how to choose a method to represent states and actions. It may be that in simple games such as chopsticks, there could be several states that seem different but actually have the same optimal action. Make sure you really understand the mechanisms behind what you are doing (like understanding the RL agent behavior, the motivation behind the bellman update, why even a simplistic reward function can actually do the job). In the long run it will actually save you a lot of time (like our modified update + terminal reward function did). We were able to make optimizations and cleaner code after we understood these topics better. Lastly, don’t be too prideful to use AI. It probably has a much better understanding of a very common topic like RL, and you should use that to make sure you really get the underlying ideas. At the same time don’t just pass code off to it, as even writing a basic RL bot for a simple game like chopsticks was clearly a little too hard for it.
 \\Nikitha: I contributed to my team by helping brainstorm a concrete project idea for us, and I have also created, worked on, and submitted milestones 2 and 3.  A suggestion I would give for students who are working on this project would be to constantly review the RL concepts you have learnt in class and keep them in mind as you are progressing through your project. This would help you make wiser decisions when it comes to finalizing state and actions, and understanding the feasibility/"do-ability" of certain features and next steps you would like to have in your game. This project has contributed a lot to my understanding in RL. It has put me in an environment when I have to directly interact with RL implementation for a game, which have help me understand that maybe RL is as scary as it looks on paper or the lecture slides. It has increased my interest is getting involved in similar if not more complicated projects in the future.
 I have used GenAI for certain parts of the milestones where I was stuck on how to format so much information in a readable manner and how to incorporate images within text. It has helped with my showing me some formatting shortcuts in Latex.
